# lcore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: LCoreConfig.cmake.in
include/: accessor.hpp  assert.hpp  base.hpp  class.hpp  config.h  container.hpp  exception.hpp  fmttype.hpp  pointer.hpp  string.hpp  traits.hpp  type.hpp  union.hpp
include/async/: acontext.hpp  agenerator.hpp  executor.hpp  generator.hpp  task.hpp  utils.hpp
include/container/: circulelist.hpp  utils.hpp
include/lcore/: accessor.hpp  assert.hpp  base.hpp  class.hpp  container.hpp  enum.hpp  exception.hpp  fmttype.hpp  fstream.hpp  guard.hpp  iostream.hpp  lru.hpp  map.hpp  memory.hpp  option.hpp  pipe.hpp  pointer.hpp  propertyset.hpp  rawptr.hpp  result.hpp  sparsebuffer.hpp  sstream.hpp  string.hpp  threadsafe.hpp  traits.hpp  type.hpp  union.hpp  variant.hpp
include/lcore/async/: acontext.hpp  agenerator.hpp  awaiter.hpp  base.hpp  executor.hpp  generator.hpp  iostream.hpp  joinset.hpp  sstream.hpp  task.hpp  traits.hpp  utils.hpp
include/lcore/container/: circulelist.hpp  list.hpp  utils.hpp  vector.hpp  view.hpp
include/lcore/object/: base.hpp  enummeta.hpp  obejct.hpp  structmeta.hpp  structmetaex.hpp  typeid.hpp
include/lcore/reflecction/: any.hpp  base.hpp  class.hpp  enum.hpp  function.hpp  ref.hpp
include/object/: obejct.hpp  typeid.hpp
src/: exception.cc
test/: CMakeLists.txt  async-executor.cc  async-product.cc  async.cc  cirlist.cc  object.cc
tests/: CMakeLists.txt  iostream.cc  map.cc  ptr.cc  result.cc  sparsebuffer.cc
tests/async/: async.cc  await.cc  executor.cc  product.cc
tests/container/: cirlist.cc
tests/object/: meta.cc
tools/: gen_reflections.py
